--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "express-async-handler": "^1.2.0",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.9.1",
+    "morgan": "^1.10.0",
     "nodemon": "^2.0.20",
-    "prettier": "^2.8.4"
+    "prettier": "^2.8.4",
+    "slugify": "^1.6.5"
   }
 }
