--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.9.1",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.9.1",
     "nodemon": "^2.0.20",
     "prettier": "^2.8.4",
     "slugify": "^1.6.5"
